@@ -46,6 +46,7 @@ my $build = WTSI::DNAP::Utilities::Build->new
                           'MooseX::StrictConstructor' => '>= 0',
                           'MooseX::Getopt'        => '0.39',
                           'npg_tracking::data::reference' => '>= 0',
+                          'npg_tracking::illumina::runfolder' => '>= 0',
                           'npg_tracking::glossary::rpt'   => '>= 0',
                           'npg_tracking::glossary::composition::factory' => '>= 0',
                           'npg_tracking::glossary::composition::component::illumina' => '>= 0',
@@ -55,7 +56,6 @@ my $build = WTSI::DNAP::Utilities::Build->new
                           'npg_qc::autoqc::role::rpt_key' => '>= 0',
                           'POSIX'                 => '>= 0',
                           'Readonly'              => '>= 1.04',
-                          'srpipe::runfolder'     => '>= 0',
                           'strict'                => '>= 0',
                           'st::api::lims'         => '>= 0',
                           'Try::Tiny'             => '>= 0.12',
